@@ -1,3 +1,9 @@
+2003-11-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	* gtk/gtkglwidget.c (gtk_widget_set_gl_capability):
+	"size_allocate" signal handler is connected by set_gl_capability()
+	function instead of "realize" handler.
+
 2003-11-07  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
 	* examples/low-level.c (realize, unrealize): Use
